--- a/Final-EDA.ipynb
+++ b/Final-EDA.ipynb
@@ -9,13 +9,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from datetime import datetime \n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -361,7 +362,7 @@
        "[1048575 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 122,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -394,7 +395,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 123,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 124,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -822,7 +823,7 @@
        "[32894 rows x 14 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 125,
    "metadata": {
     "id": "1Ada2IV5APml"
    },
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {
     "id": "lFw8DR5B_n5r"
    },
@@ -858,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 127,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -983,7 +984,7 @@
        "[32894 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 128,
    "metadata": {
     "id": "HSW3jzv2A6wn"
    },
@@ -1005,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 129,
    "metadata": {
     "id": "IDNegUuaBELW"
    },
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 130,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1374,7 +1375,7 @@
        "[1048575 rows x 17 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 131,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1406,7 +1407,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1526,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1766,7 @@
        "4           4  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,14 +1777,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l5/pv59gyw14k3bkylcml0nlqrm0000gn/T/ipykernel_9812/1551437928.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/l5/pv59gyw14k3bkylcml0nlqrm0000gn/T/ipykernel_16434/1551437928.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1798,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1961,7 @@
        "4               900.0                22650.0                  5.0           4  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,17 +1972,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the csv\n",
-    "listings_df.to_csv('../Resources//Cleaned/Cleaned_housing.csv', index=False)"
+    "listings_df.to_csv('../Resources/Cleaned/Cleaned_housing.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2112,7 @@
        "[32894 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2123,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2279,7 @@
        "4       45.0       1977  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2330,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2426,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2437,7 +2438,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2448,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2569,7 @@
        "4       1977  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2579,7 +2580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2597,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2607,7 +2608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -2798,7 +2799,7 @@
        "[50481 rows x 8 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2809,7 +2810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2819,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +3011,7 @@
        "4     False  America/Puerto_Rico  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3022,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -3063,7 +3064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3074,7 +3075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -3306,7 +3307,7 @@
        "4     False  America/Puerto_Rico  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3317,7 +3318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -3358,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3372,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3382,7 +3383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3393,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -3534,7 +3535,7 @@
        "4    275.7  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3545,7 +3546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3555,7 +3556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -3635,7 +3636,7 @@
        "4                            NaN                     -1  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3647,28 +3648,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sweetviz in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (2.1.3)\n",
+      "Requirement already satisfied: jinja2>=2.11.1 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (2.11.3)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (1.21.5)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (1.7.3)\n",
+      "Requirement already satisfied: tqdm>=4.43.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (4.63.0)\n",
+      "Requirement already satisfied: matplotlib>=3.1.3 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (3.5.1)\n",
+      "Requirement already satisfied: pandas!=1.0.0,!=1.0.1,!=1.0.2,>=0.25.3 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (1.4.1)\n",
+      "Requirement already satisfied: importlib-resources>=1.2.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from sweetviz) (5.7.1)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from importlib-resources>=1.2.0->sweetviz) (3.7.0)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from jinja2>=2.11.1->sweetviz) (2.0.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (0.11.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (9.0.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (1.3.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (3.0.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (21.3)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from matplotlib>=3.1.3->sweetviz) (4.25.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from pandas!=1.0.0,!=1.0.1,!=1.0.2,>=0.25.3->sweetviz) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/rohansalwi/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib>=3.1.3->sweetviz) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install sweetviz"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {
     "id": "vlc2gdb0Bq_w"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import sweetviz as sv"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "id": "v09vBQtJCEtl"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "housing_report = sv.analyze(listings_df)\n",
+    "housing_report.show_html(\"./housing_report.html\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -3685,6 +3717,13 @@
    "metadata": {
     "id": "8mJqmIHFDxla"
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
